--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
   <body>
     <header>
       <nav
-        class="w-full px-20 py-4 bg-gray-800 text-white flex justify-between items-center"
+        class="w-full px-20 py-4 bg-gray-800 text-white"
       >
-        <div>
-          <p class="text-xl"><strong>Focus Flow</strong></p>
-        </div>
-        <div class="space-x-20 hidden md:block">
-          <a href="#">Features</a>
-          <a href="#">Pricing</a>
-          <a href="#">Testimonials</a>
-        </div>
-        <div>
-          <button class="bg-blue-500 p-2 rounded-full text-sm">
-            Get Started
-          </button>
+        <div class="flex justify-between items-center">
+          <a href="#" class="text-2xl md:text-3xl">FOCUS FLOW</a>
+          <div class="flex items-center gap-5 order-2 md:order-3">
+            <button type="button" class="p-2 bg-blue-500 text-sm rounded-full">Get Started</button>
+            <button type="button" id="button-navbar" class="w-5 h-5 inline md:hidden" data-collapse-toggle="navbar-menu" aria-controls="navbar-menu" aria-expanded="false">
+              <span>
+                <img src="./image/hamburger-menu.svg" alt="menu">
+              </span>
+            </button>
+          </div>
+          <div id="navbar-menu" class="flex md:flex justify-center items-center justify-center w-full md:w-auto order-1 md:order-2 hidden md:block md:animate-none absolute md:relative top-16 md:top-0 left-0 md:left-0 bg-gray-800 px-20 md:bg-transparent md:p-0 rounded-lg md:rounded-none">
+            <ul class="flex flex-row justify-center items-center space-x-10 border border-gray-500 font-medium rounded-lg md:border-0 w-full py-6 md:p-0 mt-2 md:mt-0">
+              <li><a class="navbar-link" href="#features">Features</a></li>
+              <li><a class="navbar-link" href="#pricing">Pricing</a></li>
+              <li><a class="navbar-link" href="#contact">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
@@ -39,8 +44,8 @@
         class="w-full h-full grid grid-cols-1 md:grid-cols-2 gap-2 px-20 py-4 bg-gray-800"
       >
         <div class="text-white space-y-10 fade-in">
-          <h1 class="text-5xl"><b>BOOST YOUR PRODUCTIVITY</b></h1>
-          <p>
+          <h1 class="text-3xl md:text-5xl"><b>BOOST YOUR PRODUCTIVITY</b></h1>
+          <p class="text-sm md:text-lg">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis
             aute irure dolor in reprehenderit in voluptate velit esse cillum
@@ -66,7 +71,7 @@
         id="features"
         class="w-full h-auto bg-transparent px-20 py-4 mt-10 fade-in"
       >
-        <div class="grid grid-cols-3 gap-3">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
           <div class="flex justify-center">
             <div class="bg-neutral-primary-soft block max-w-sm rounded-base">
               <a href="#">
@@ -155,12 +160,12 @@
       </div>
     </section>
 
-    <footer>
+    <footer id="contact">
       <div class="w-full h-32 mt-10">
         <div
           class="w-full h-full bg-gray-800 text-white flex justify-center items-center"
         >
-          <p>© 2024 Focus Flow. All rights reserved.</p>
+          <p class="text-sm md:text-md">© 2024 Focus Flow. All rights reserved.</p>
         </div>
       </div>
     </footer>
