--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav
-        class="w-full px-20 py-4 bg-gray-800 text-white"
+        class="w-full p-5 md:px-20 py-4 bg-gray-800 text-white"
       >
         <div class="flex justify-between items-center">
           <a href="#" class="text-2xl md:text-3xl">FOCUS FLOW</a>
@@ -25,7 +25,7 @@
               </span>
             </button>
           </div>
-          <div id="navbar-menu" class="flex md:flex justify-center items-center justify-center w-full md:w-auto order-1 md:order-2 hidden md:block md:animate-none absolute md:relative top-16 md:top-0 left-0 md:left-0 bg-gray-800 px-20 md:bg-transparent md:p-0 rounded-lg md:rounded-none">
+          <div id="navbar-menu" class="flex md:flex justify-center items-center justify-center w-full md:w-auto order-1 md:order-2 hidden md:block md:animate-none absolute md:relative top-16 md:top-0 left-0 md:left-0 bg-gray-800 p-5 md:px-20 md:bg-transparent md:p-0 rounded-lg md:rounded-none">
             <ul class="flex flex-row justify-center items-center space-x-10 border border-gray-500 font-medium rounded-lg md:border-0 w-full py-6 md:p-0 mt-2 md:mt-0">
               <li><a class="navbar-link" href="#features">Features</a></li>
               <li><a class="navbar-link" href="#pricing">Pricing</a></li>
@@ -41,7 +41,7 @@
 
       <section
         id="hero"
-        class="w-full h-full grid grid-cols-1 md:grid-cols-2 gap-2 px-20 py-4 bg-gray-800"
+        class="w-full h-full grid grid-cols-1 md:grid-cols-2 gap-2 p-5 md:px-20 py-4 bg-gray-800"
       >
         <div class="text-white space-y-10 fade-in">
           <h1 class="text-3xl md:text-5xl"><b>BOOST YOUR PRODUCTIVITY</b></h1>
@@ -69,7 +69,7 @@
 
       <section
         id="features"
-        class="w-full h-auto bg-transparent px-20 py-4 mt-10 fade-in"
+        class="w-full h-auto bg-transparent p-5 md:px-20 py-4 mt-10 fade-in"
       >
         <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
           <div class="flex justify-center">
@@ -151,7 +151,7 @@
       </section>
     </main>
 
-    <section id="pricing" class="w-full h-auto bg-transparent px-20 py-4 flex justify-center items-start">
+    <section id="pricing" class="w-full h-auto bg-transparent p-5 md:px-20 py-4 flex justify-center items-start">
       <div>
         <button id="button-month" type="button" class="w-20 bg-gray-100 p-2 text-center rounded-l-md">Month</button>
       </div>
